// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeclareComponent Basic Babel 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "type": "Identifier",
        "typeAnnotation": {
          "type": "TypeAnnotation",
          "typeAnnotation": {
            "type": "AnyTypeAnnotation",
          },
        },
      },
      "type": "DeclareVariable",
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Basic ESTree 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [],
      "rendersType": null,
      "rest": null,
      "type": "DeclareComponent",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Params and renders Babel 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "type": "Identifier",
        "typeAnnotation": {
          "type": "TypeAnnotation",
          "typeAnnotation": {
            "type": "AnyTypeAnnotation",
          },
        },
      },
      "type": "DeclareVariable",
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Params and renders ESTree 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [
        {
          "name": {
            "name": "bar",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "optional": false,
          "type": "ComponentTypeParameter",
          "typeAnnotation": {
            "type": "StringTypeAnnotation",
          },
        },
      ],
      "rendersType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "name": "Foo",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "rest": null,
      "type": "DeclareComponent",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Rest param Babel 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "type": "Identifier",
        "typeAnnotation": {
          "type": "TypeAnnotation",
          "typeAnnotation": {
            "type": "AnyTypeAnnotation",
          },
        },
      },
      "type": "DeclareVariable",
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Rest param ESTree 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [],
      "rendersType": null,
      "rest": {
        "name": {
          "name": "rest",
          "optional": false,
          "type": "Identifier",
          "typeAnnotation": null,
        },
        "optional": false,
        "type": "ComponentTypeParameter",
        "typeAnnotation": {
          "callProperties": [],
          "exact": false,
          "indexers": [],
          "inexact": false,
          "internalSlots": [],
          "properties": [
            {
              "key": {
                "name": "bar",
                "optional": false,
                "type": "Identifier",
                "typeAnnotation": null,
              },
              "kind": "init",
              "method": false,
              "optional": false,
              "proto": false,
              "static": false,
              "type": "ObjectTypeProperty",
              "value": {
                "type": "StringTypeAnnotation",
              },
              "variance": null,
            },
          ],
          "type": "ObjectTypeAnnotation",
        },
      },
      "type": "DeclareComponent",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;
